--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<div class="navbar navbar-default navbar-static-top">
+  <div class="container">
+    <div class="navbar-header">
+      <strong class="navbar-brand">Мой таймер</strong>
+    </div>
+  </div>
+</div>
+<pomodoro-timer></pomodoro-timer>
