--- a/src/app/timer/pomodoro-tasks/pomodoro-tasks.component.html
+++ b/src/app/timer/pomodoro-tasks/pomodoro-tasks.component.html
@@ -1,6 +1,25 @@
 <div class="container text-center">
-  <img src="../assets/pomodoro.png" alt="pomodoro">
+  <img src="../../../assets/pomodoro.png" alt="pomodoro" class="pomodore">
   <div class="container">
+    <div>
+      <h3>
+        {{queuedPomodoros | i18nPlural:queueHeaderMapping}}
+        for today
+        <span class="small" *ngIf="queuedPomodoros > 0">
+          (Estimated time: {{queuedPomodoros * 25}})
+        </span>
+      </h3>
+      <p>
+        <span *ngFor="let queredTask of tasks">
+          <app-pomodore-task-icons
+            [task]="queredTask"
+            [size]="50"
+            (mouseover)="tooltip.innerText = queredTask.name"
+            (mouseout)="tooltip.innerText = 'Mouseover for details'"></app-pomodore-task-icons>
+        </span>
+      </p>
+      <p #tooltip *ngIf="queuedPomodoros > 0">Mouse for details</p>
+    </div>
     <h4>Tasks backlog</h4>
     <table class="table">
       <thead>
@@ -24,7 +43,8 @@
       </thead>
       <tbody>
       <tr *ngFor="let task of tasks; let i = index">
-        <th scope="row">{{i}}</th>
+        <th scope="row">{{i}}
+        <span *ngIf="task.queued" class="label label-info">queued</span></th>
         <td>{{task.name | slice: 0.35}}
           <span [hidden]="task.name.length<35">...</span>
         </td>
@@ -35,7 +55,28 @@
         <td class="text-center">
           {{task.pomodoroRequired}}
         </td>
-        <td>[Future options]</td>
+        <td>
+          <button type="button"
+          class="btn btn-default btn-xs"
+          (click)="toggleTask(task)"
+          [ngSwitch]="task.queued">
+            <template
+            [ngSwitchCase]="false">
+              <i class="glyphicon glyphicon-plus-sign"></i>
+              add
+            </template>
+            <template
+              [ngSwitchCase]="true">
+              <i class="glyphicon glyphicon-minus-sign"></i>
+              remove
+            </template>
+            <template
+              ngSwitchDefault>
+              <i class="glyphicon glyphicon-plus-sign"></i>
+              add
+            </template>
+          </button>
+        </td>
       </tr>
       </tbody>
     </table>
