--- a/src/app/tasks/tasks/tasks.component.html
+++ b/src/app/tasks/tasks/tasks.component.html
@@ -2,7 +2,58 @@
   <h3>
     {{queuedPomodoros | i18nPlural: queuedHeaderMapping}} for today
     <span class="small" *ngIf="queuedPomodoros > 0">
-
+      (Estimated time: {{queuedPomodoros * timerMinutes | pomodoroFormattedTime}})
     </span>
   </h3>
+  <p>
+    <span
+    *ngFor="let queuedTask of tasks | pomodoroQueuedOnly: true">
+      <app-pomodore-task-icons [task]="queuedTask" [taskTooltip]="tooltip" size="50">
+      </app-pomodore-task-icons>
+    </span>
+  </p>
+  <p #tooltip [hidden]="queuedPomodoros === 0">Mouseover for details</p>
+
+  <h4>Task backlog</h4>
+  <table class="table">
+    <thead>
+    <tr>
+      <th>Task Id</th>
+      <th>Task name</th>
+      <th>Deliver by</th>
+      <th>Pomodoros</th>
+      <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let task of tasks; let i = index">
+      <th scope="row">{{i}}
+        <span *ngIf="task.queued" class="label label-info">
+          Queued
+        </span>
+      </th>
+      <td>{{task.name | slice: 0:35}}
+        <span [hidden]="task.name.length < 35">...</span>
+      </td>
+      <td>{{task.deadline | date: 'fullDate'}}
+      <span *ngIf="task.deadline < today" class="label label-info"> Due </span>
+      </td>
+      <td class="text-center">{{task.pomodorosRequired}}</td>
+      <td>
+        <button type="button" class="btn btn-default btn-xs"
+        [ngSwitch]="task.queued" (click)="toggleTask(task)">
+          <template [ngSwitchCase]="false">
+            <i class="glyphicon glyphicon-plus-sign"></i>Add
+          </template>
+          <template [ngSwitchCase]="true">
+            <i class="glyphicon glyphicon-minus-sign"></i>Remove
+          </template>
+          <template [ngSwitchDefault]>
+            <i class="glyphicon glyphicon-plus-sign"></i>Add
+          </template>
+        </button>
+      </td>
+    </tr>
+    </tbody>
+  </table>
 </div>
